Added projectiles and collision

--- a/FirstGameProject/FirstGameProject.csproj
+++ b/FirstGameProject/FirstGameProject.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Controller\SpaciesGame.cs" />
     <Compile Include="Model\Player.cs" />
     <Compile Include="View\Animation.cs" />
+    <Compile Include="View\ParallaxingBackground.cs" />
+    <Compile Include="Model\Enemy.cs" />
+    <Compile Include="Model\Projectile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
